syntax = "proto3";

option go_package="/pb";

package pb;

service FileService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileStatus);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileStatus);
}

message UploadFileRequest {
  bytes Content = 1;
}

message UploadFileStatus {
  bool IsSuccess = 1;
  string Reason = 2;
}

message DownloadFileRequest {
  string FilePath = 1;
}

message DownloadFileStatus {
  bytes Content = 1;
  string Hash = 2;
}

service ShellService {
  rpc StartShell(stream CommandRequest) returns (stream CommandResponse);
}

message CommandRequest {
  string command = 1;
}

message CommandResponse {
  string output = 1;
}